--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,10 @@
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://132.72.65.120:3306/soccer_sys_db?serverTimezone=UTC
+#    url: jdbc:mysql://132.72.65.120:3306/soccer_sys_db?serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/soccer_sys_db?serverTimezone=UTC
     username: root
-    password: pass
+    password: STR21
   jpa:
     hibernate:
       ddl-auto: update
