--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
 #    url: jdbc:mysql://132.72.65.120:3306/soccer_sys_db?serverTimezone=UTC
     url: jdbc:mysql://localhost:3306/soccer_sys_db?serverTimezone=UTC
     username: root
